[project]
name = "temboard-agent"
version = "9.0.1"
description = "PostgreSQL Remote Control Agent"
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = "PostgreSQL"
authors = [
    {name = "Dalibo", email = "contact@dalibo.com"},
]
classifiers = [
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "cryptography",
]

[project.urls]
Homepage = "https://labs.dalibo.com/temboard"
Documentation = "https://temboard.readthedocs.io"
Repository = "https://github.com/dalibo/temboard"
Changelog = "https://github.com/dalibo/temboard/blob/master/CHANGELOG.md"

[project.scripts]
temboard-agent = "temboardagent.__main__:main"

[project.entry-points."temboardagent.plugins"]
activity = "temboardagent.plugins.activity:ActivityPlugin"
administration = "temboardagent.plugins.administration:AdministrationPlugin"
dashboard = "temboardagent.plugins.dashboard:DashboardPlugin"
maintenance = "temboardagent.plugins.maintenance:MaintenancePlugin"
monitoring = "temboardagent.plugins.monitoring:MonitoringPlugin"
pgconf = "temboardagent.plugins.pgconf:PgConfPlugin"
statements = "temboardagent.plugins.statements:StatementsPlugin"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["temboardagent*"]

[tool.setuptools.package-data]
temboardagent = ["queries/*.sql"]

[tool.check-manifest]
ignore = [
    "*/__pycache__/*",
    "temboardagent/toolkit",
    "temboardagent/toolkit/*",
    "temboardagent/toolkit/tasklist/*",
]
