[project]
name = "temboard"
version = "10.0rc1"
description = "temBoard User Interface."
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = "PostgreSQL"
authors = [
    {name = "Dalibo", email = "contact@dalibo.com"},
]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "cryptography",
    # There is no hard dependency on psycopg2 to allow using
    # psycopg2-binary instead. psycopg2 is not provided by psycopg2-binary
    # and there is no way to state an OR dependency in Python. It's up to
    # the user or package manager to ensure psycopg2 dependency. See
    # documentation.
]

[project.urls]
Homepage = "https://labs.dalibo.com/temboard"
Documentation = "https://temboard.readthedocs.io"
Repository = "https://github.com/dalibo/temboard"
Changelog = "https://github.com/dalibo/temboard/blob/master/CHANGELOG.md"

[project.scripts]
temboard = "temboardui.__main__:main"

[project.entry-points."temboardui.plugins"]
activity = "temboardui.plugins.activity:ActivityPlugin"
dashboard = "temboardui.plugins.dashboard:DashboardPlugin"
maintenance = "temboardui.plugins.maintenance:MaintenancePlugin"
monitoring = "temboardui.plugins.monitoring:MonitoringPlugin"
pgconf = "temboardui.plugins.pgconf:PGConfPlugin"
statements = "temboardui.plugins.statements:StatementsPlugin"

[build-system]
requires = ["uv_build>=0.9.10,<0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "temboardui"
module-root = ""
